add SingleProduct page and SuggestedProducts to project

--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>فروشگاه الکترونیک</title>
-    <link href="src/assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="src/assets/css/font-awesome.min.css" rel="stylesheet">
-    <link href="src/assets/css/prettyPhoto.css" rel="stylesheet">
-    <link href="src/assets/css/price-range.css" rel="stylesheet">
-    <link href="src/assets/css/animate.css" rel="stylesheet">
-    <link href="src/assets/css/main.css" rel="stylesheet">
-    <link href="src/assets/css/responsive.css" rel="stylesheet">
-    <link href="src/assets/css/animate.css" rel="stylesheet">
+    <!-- حتما اسلش اولش قرار می دهیم وگرنه به ادامه روت جاری میچسبه که چیزی پیدا نمی کند -->
+    <link href="/src/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/src/assets/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/src/assets/css/prettyPhoto.css" rel="stylesheet">
+    <link href="/src/assets/css/price-range.css" rel="stylesheet">
+    <link href="/src/assets/css/animate.css" rel="stylesheet">
+    <link href="/src/assets/css/main.css" rel="stylesheet">
+    <link href="/src/assets/css/responsive.css" rel="stylesheet">
+    <link href="/src/assets/css/animate.css" rel="stylesheet">
 
 
-    <link rel="shortcut icon" href="images/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+    <!-- <link rel="shortcut icon" href="/images/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/images/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/images/ico/apple-touch-icon-57-precomposed.png"> -->
   </head>
 
   <body>
@@ -29,12 +30,12 @@
     <div id="app"></div>
     <script src="/dist/build.js"></script>
 
-    <script src="src/assets/js/jquery.js"></script>
-    <script src="src/assets/js/bootstrap.min.js"></script>
-    <script src="src/assets/js/jquery.scrollUp.min.js"></script>
-    <script src="src/assets/js/price-range.js"></script>
-    <script src="src/assets/js/jquery.prettyPhoto.js"></script>
-    <script src="src/assets/js/custom.js"></script>
+    <script src="/src/assets/js/jquery.js"></script>
+    <script src="/src/assets/js/bootstrap.min.js"></script>
+    <script src="/src/assets/js/jquery.scrollUp.min.js"></script>
+    <script src="/src/assets/js/price-range.js"></script>
+    <script src="/src/assets/js/jquery.prettyPhoto.js"></script>
+    <script src="/src/assets/js/custom.js"></script>
   </body>
 
 </html>
